--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,46 @@
-.App {
-  text-align: center;
-}
+.root {
+    display: flex;
+    flex-direction: column;
+    background: #eee;
+    height: 100%;
+  }
 
-.App-logo {
-  height: 40vmin;
-}
+  .header {
+    display: flex;
+    height: 48px;
+    padding: 0 20px;
+    align-items: center;
+    justify-content: space-between;
+    background: #fff;
+    border-bottom: 1px solid #ddd;
+    z-index: 999;
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  .title {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 500;
+  }
 
-.App-link {
-  color: #09d3ac;
-}
+  .wrapper {
+    flex: 1;
+  }
+
+  .tree {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+
+  .reset {
+    position: absolute;
+    right: 10px;
+    top: 60px;
+    padding: 4px 10px;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    line-height: 1;
+    cursor: pointer;
+  }
