--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .root {
     display: flex;
     flex-direction: row;
@@ -32,8 +36,6 @@
 
   .tree {
     background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
   }
 
   .reset {
